test/test_examples/syntactic_examples/syntax_error/error_fun_def_12.zig
// Syntax error: missing parameter identifier

const ifj = @import("ifj24.zig"); 

pub fn main( : i32) void {

}  